<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="popular_movies">Popular Movies</string>
</resources>
